--- a/config.env
+++ b/config.env
@@ -1,28 +1,26 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5016409859:AAF2TICuJBTznk1eWmOw2LjGdLvrgY3_rm0"
+GDRIVE_FOLDER_ID = "1Cy5HOoqf31jUKJXwvTm-x21PwQP_SXLJ"
+OWNER_ID = 536508159
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 6
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
-BASE_URL_OF_BOT = ""  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 2121991
+TELEGRAM_HASH = "aa3ca13ff132601db790fe86aecf0f30"
+BASE_URL_OF_BOT = "https://mirrorartutoss3.herokuapp.com/"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
+AUTHORIZED_CHATS = "-618273812 -1001562149617"  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://index.artutos-mirror.workers.dev/0:/BOT4"
 STATUS_LIMIT = ""  # Recommended limit is 4
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "4ktWRCIS"
+MEGA_EMAIL_ID = "vmoctezumamaldonado@gmail.com"
+MEGA_PASSWORD = "grillo1977"
 BLOCK_MEGA_FOLDER = ""
 BLOCK_MEGA_LINKS = ""
 STOP_DUPLICATE = ""
@@ -48,8 +46,8 @@ MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the li
 YT_COOKIES_URL = ""  # You can use gist raw link
 NETRC_URL = ""  # You can use gist raw link
 # GDTOT COOKIES
-PHPSESSID = ""
-CRYPT = ""
+PHPSESSID = "civpkm0qnfk99a16gnrqg7m99n"
+CRYPT = "TmtaVm45N3ZXK3ordG1QbVJCd0ZoSjk1TmNoclFJRE1rdkR1c010QkI3WT0%3D"
 # To use limit don't add unit. Default unit is GB.
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -57,13 +55,13 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes fill True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Add more buttons (Three buttons are already added including Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them empty
-BUTTON_FOUR_NAME = ""
-BUTTON_FOUR_URL = ""
-BUTTON_FIVE_NAME = ""
-BUTTON_FIVE_URL = ""
+BUTTON_FOUR_NAME = "Grupo Mirror 🔰"
+BUTTON_FOUR_URL = "https://t.me/Artutos_Mirror_Latino"
+BUTTON_FIVE_NAME = "Únete al GoogleGroups 🔰🎁💾🖨"
+BUTTON_FIVE_URL = "https://groups.google.com/g/mirror-artutos"
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 # QBittorrent Search Plugins, remove/add plugins as u want with raw github links
