--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5016409859:AAF2TICuJBTznk1eWmOw2LjGdLvrgY3_rm0"
-GDRIVE_FOLDER_ID = "1Cy5HOoqf31jUKJXwvTm-x21PwQP_SXLJ"
+BOT_TOKEN = "5001710839:AAGoxn2U08b1iOnBoErFs77wSe4qN9VU2b4"
+GDRIVE_FOLDER_ID = "1JSVnnoYSP7GeIunSp3nR8RYnTtiEkQ2J"
 OWNER_ID = 536508159
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 6
@@ -8,14 +8,14 @@ AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "True"
 TELEGRAM_API = 2121991
 TELEGRAM_HASH = "aa3ca13ff132601db790fe86aecf0f30"
-BASE_URL_OF_BOT = "https://mirrorartutoss3.herokuapp.com/"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
+BASE_URL_OF_BOT = ""  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = "-618273812 -1001562149617"  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://index.artutos-mirror.workers.dev/0:/BOT4"
+INDEX_URL = "https://index.artutos-mirror.workers.dev/0:/32TB"
 STATUS_LIMIT = ""  # Recommended limit is 4
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = "4ktWRCIS"
